# Cloud-task

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
.mimocode/plans/: 1783218866723-neon-moon.md
airflow/config/: airflow.cfg
airflow/dags/: weather_silver_processing_dag.py
airflow/plugins/: api_validator.py
cloud_funcs/: requirements.txt
cloud_funcs/weather_fetcher/: main.py
core_settings/: __init__.py  bigquery_schema.json  core_settings.py
terraform/: .terraform.lock.hcl  bigquery.tf  buckets.tf  env_file.tf  functions.tf  iam.tf  locals.tf  main.tf  outputs.tf  providers.tf  secrets.tf  terraform.tfvars.example  variables.tf
terraform/scripts/: uid.sh
terraform/src/: api_response.json
validators/: api_validator.py
