[project]
name = "cloud-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "apache-airflow-providers-google>=22.2.0 ; sys_platform != 'win32'",
    "requests>=2.34.2",
]
